--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,7 +13,7 @@ jobs:
 
   compare_base_dockerfiles:
     docker:
-      - image: 17.09.0-ce-git
+      - image: docker:17.09.0-ce-git
     steps:
       - checkout:
           path: ~/nipype
