--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -47,6 +47,13 @@ jobs:
       - attach_workspace:
           at: /tmp
       - run:
+          name: Modify Nipype version if necessary
+          working_directory: /home/circleci/nipype
+          command: |
+            if [ "$CIRCLE_TAG" != "" ]; then
+              sed -i -E "s/(__version__ = )'[A-Za-z0-9.-]+'/\1'$CIRCLE_TAG'/" nipype/info.py
+            fi
+      - run:
           name: Get base image (pull or build)
           no_output_timeout: 60m
           command: |
@@ -64,13 +71,6 @@ jobs:
               --build-arg BUILD_DATE="$(date -u +"%Y-%m-%dT%H:%M:%SZ")" \
               --build-arg VCS_REF="$(git rev-parse --short HEAD)" \
               --build-arg VERSION="${CIRCLE_TAG}" /home/circleci/nipype
-      - run:
-          name:
-          working_directory: /home/circleci/nipype
-          command: |
-            if [ "$CIRCLE_TAG" != "" ]; then
-              sed -i -E "s/(__version__ = )'[A-Za-z0-9.-]+'/\1'$CIRCLE_TAG'/" nipype/info.py
-            fi
       - run:
           name: Build main image (py27)
           no_output_timeout: 60m
