--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -33,17 +33,12 @@ jobs:
       - run:
           name: Determine how to get base image
           command: |
-            GET_BASE="/tmp/docker/get_base_image.sh"
-
-            # This directory only exists if a cache was found.
             if [ -f /tmp/docker/cache/Dockerfile.base-pruned ]; then
-              echo "Cached Dockerfile found."
-              echo "echo Pulling base image ..." > "$GET_BASE"
-              echo "docker pull kaczmarj/nipype:base" >> "$GET_BASE"
+              echo "Cache found"
+              echo 'export GET_BASE=PULL' > /tmp/docker/get_base_image.sh
             else
-              echo "Cached Dockerfile found."
-              echo "echo Building base image ..." > "$GET_BASE"
-              echo "docker build -t kaczmarj/nipype:base - < /home/circleci/nipype/docker/Dockerfile.base" >> "$GET_BASE"
+              echo "Cache not found"
+              echo 'export GET_BASE=BUILD' > /tmp/docker/get_base_image.sh
             fi
       - persist_to_workspace:
           root: /tmp
@@ -75,8 +70,19 @@ jobs:
       - run:
           name: Get base image (pull or build)
           no_output_timeout: 60m
+          working_directory: /home/circleci/nipype
           command: |
-            bash /tmp/docker/get_base_image.sh
+            source /tmp/docker/get_base_image.sh
+            if [ "$GET_BASE" == "PULL" ]; then
+              echo "Pulling base image ..."
+              docker pull kaczmarj/nipype:base
+            elif [ "$GET_BASE" == "BUILD" ]; then
+              echo "Building base image ..."
+              docker build -t kaczmarj/nipype:base - < docker/Dockerfile.base
+            else
+              echo "Error: method to get base image not understood"
+              exit 1
+            fi
       - run:
           name: Build main image (py36)
           no_output_timeout: 60m
