do not run tests - speed up ci for testing

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -34,10 +34,10 @@ jobs:
           name: Determine how to get base image
           command: |
             if [ -f /tmp/docker/cache/Dockerfile.base-pruned ]; then
-              echo "Cache found"
+              echo "Cache found. Will pull base image."
               echo 'export GET_BASE=PULL' > /tmp/docker/get_base_image.sh
             else
-              echo "Cache not found"
+              echo "Cache not found. Will build base image."
               echo 'export GET_BASE=BUILD' > /tmp/docker/get_base_image.sh
             fi
       - persist_to_workspace:
@@ -137,7 +137,8 @@ jobs:
           command: |
             mkdir -p "$WORKDIR"
             chmod -R 777 "$WORKDIR"
-            bash /home/circleci/nipype/.circleci/tests.sh
+            echo "not running tests now"
+            # bash /home/circleci/nipype/.circleci/tests.sh
       - store_artifacts:
           path: /home/circleci/work/tests
       - run:
