--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -142,7 +142,7 @@ jobs:
       - persist_to_workspace:
           root: /tmp
           paths:
-            - docker/*
+            - docker/nipype-base-latest-py36-py27.tar.gz
 
 
   deploy:
