create empty file for persist_to_workspace

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -30,7 +30,7 @@ jobs:
       - persist_to_workspace:
           root: /tmp
           paths:
-            - docker/*
+            - docker/get_base_image.sh
 
 
   build_and_test:
@@ -138,6 +138,10 @@ jobs:
                           kaczmarj/nipype:py36 \
                           kaczmarj/nipype:py27 | gzip -1 > /tmp/docker/nipype-base-latest-py36-py27.tar.gz
               du -h /tmp/docker/nipype-base-latest-py36-py27.tar.gz
+            else
+              # Workaround for `persist_to_workspace` to succeed when we are
+              # not deploying.
+              touch /tmp/docker/nipype-base-latest-py36-py27.tar.gz
             fi
       - persist_to_workspace:
           root: /tmp
